Fix: Fixed backdrop-filter blur for desktops
Flickering bugs still remain. Applying backdrop filter directly to the navheader on mobile phones breaks navigation bar
because filter properties diregard positioning of child elements & since I am not using the same navbar across all devices, it is problematic

You can read more about it here 7e307958ae44d73f3ec9cd970c341b7f56b41211

 I can't seem to figure how to work around this issue.

> Tried blurring using pseudo-elements results in flickering affect which looks ugly

> Tried applying backdrop filter using JS via classes but it doesn't work. Navbar breaks, even tried adding a timeout to ensure that blur gets removed before navbar slides out, but nope.

> Added an extra empty div just for the blur. It causes same issues as the pseudo element blur.

Now. I am out of ideas. Perhaps, I will have to add separate markup for mobile navbar if I want to have both blur & working navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -227,22 +227,8 @@ a {
   z-index: 10;
   transition: transform var(--quick) var(--easeOutSine) 0.1s,
               height var(--quick) var(--easeOutSine);
+  backdrop-filter: blur(6px);
   overflow: hidden;
-}
-
-.nav-header::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 9;
-}
-
-@supports (backdrop-filter: blur(1px)) {
-  .nav-header::before {
-    backdrop-filter: blur(6px);
-  }
 }
 
 .navbar {
@@ -320,6 +306,10 @@ a {
 }
 
 @media screen and (max-width: 768px) {
+  .nav-header {
+    backdrop-filter: none;
+  }
+
   .nav-box {
     --gap: 2.5rem;
     position: fixed;
@@ -337,7 +327,7 @@ a {
   }
 
   .nav-box[toggle="true"] {
-    transform: translateX(0%);
+    transform: translateX(0);
   }
 
   .nav-box,
